kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-workspaces-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: workspaces
